Fix vertical alignment of DropdownWidget handle's text
Fixing vertical alignment of text in DropdownWidgets' handles in MediaWiki
theme by aligning padding with ButtonWidget's value.

Bug: T115179

--- a/src/themes/mediawiki/widgets.less
+++ b/src/themes/mediawiki/widgets.less
@@ -105,7 +105,7 @@
 	.oo-ui-inline-spacing(0.5em);
 
 	&-handle {
-		padding: 0.3em 0;
+		padding: 0.5em 0;
 		height: 2.275em;
 		border: 1px solid #ccc;
 		border-radius: 0.1em;
